// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match snapshot with no params 1`] = `
<DocumentFragment>
  .c0 {
  display: grid;
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  grid-template-columns: 1fr;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`match snapshot with params 1`] = `
<DocumentFragment>
  .c0 {
  display: grid;
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  grid-template-columns: 1fr;
}

@media (min-width:576px) {
  .c0 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c0 {
    grid-template-columns: repeat(3,1fr);
  }
}

@media (min-width:992px) {
  .c0 {
    grid-template-columns: repeat(4,1fr);
  }
}

@media (min-width:1200px) {
  .c0 {
    grid-template-columns: repeat(5,1fr);
  }
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`match snapshot with sm and lg 1`] = `
<DocumentFragment>
  .c0 {
  display: grid;
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  grid-template-columns: 1fr;
}

@media (min-width:576px) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:992px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

<div
    class="c0"
  />
</DocumentFragment>
`;
